app/frontend/stylesheets/badge.css
/* Based on https://daisyui.com/components/radial-progress/ */

.badge-wrapper {
  /* Same as segment container, so transparency works correctly */
  @apply xl:tall:bg-slate-300 xl:tall:dark:bg-slate-800 rounded-full;
}

.badge {
  --value: 0;
  --size: 6rem;
  --thickness: calc(var(--size) / 20);
}

.badge {
  @apply relative inline-grid w-full place-content-center rounded-full;
}

.badge .inside {
  @apply flex w-full flex-col items-center leading-normal;
}

.badge .value {
  @apply w-full text-center font-medium;

  font-size: calc(var(--size) / 6);
}

.badge .value .sensor-value {
  @apply inline-flex justify-center;
}

.badge .title {
  @apply w-full text-center font-medium uppercase;

  font-size: calc(var(--size) / 10);
}

@media (width >= theme(--breakpoint-lg)) {
  .badge {
    --size: 8rem;
  }
}

@media (width >= theme(--breakpoint-xl)) and (height >= 860px) {
  .badge {
    --size: 6rem;
    @apply box-content h-(--size) w-(--size) border-4 border-transparent;
  }

  .badge:before,
  .badge:after {
    @apply absolute rounded-full;
    content: '';
  }

  .badge.percent:before {
    @apply inset-0;

    background:
      radial-gradient(farthest-side, currentColor 98%, #0000)
        top/var(--thickness) var(--thickness) no-repeat,
      conic-gradient(currentColor calc(var(--value) * 1%), #0000 0);
    mask: radial-gradient(
      farthest-side,
      #0000 calc(99% - var(--thickness)),
      #000 calc(100% - var(--thickness))
    );
  }

  .badge.percent:after {
    @apply bg-current;

    inset: calc(50% - var(--thickness) / 2);
    transform: rotate(calc(var(--value) * 3.6deg - 90deg))
      translate(calc(var(--size) / 2 - 50%));
  }

  .badge .value {
    @apply font-medium;

    font-size: calc(var(--size) / 4);
  }
}

